Fix spacing

--- a/index.scss
+++ b/index.scss
@@ -146,7 +146,6 @@ footer {
   font-family: var(--font-family-mono);
   background-color: var(--color-textarea-bg);
   color: var(--color-textarea-fg);
-  margin: 8px 0;
 
   &::placeholder {
     color: var(--color-body-fg-muted);
